--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
      <div class="left">
         <div class="ham">
-            <img src="../youtube/Resources/hamburger-menu.svg" width="25px" >
+            <img src="./Resources/hamburger-menu" width="25px" >
         </div>
         <div class="logo">
             <img src="./Resources/youtube-logo.svg" width="90px" style="margin-left: 20px;">
